manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alan-app-service
spec:
  selector:
    app: alan-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 5000
  type: ClusterIP
